# attio-dev-tools

./: .claude-config  .gitignore  APP_TEMPLATES_RESEARCH.md  CLI_RESEARCH.md  NODE_VCR_RESEARCH.md  PLAN.md  README.md  RESEARCH.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: attio-data-model.md  http-retry-spec.md
