[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attio-workspace"
version = "0.1.0"
description = "Attio Python SDK monorepo"
requires-python = ">=3.10"

[tool.hatch.workspace]
members = ["packages/sdk", "packages/cli"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["UP007"]

[tool.ruff.lint.isort]
known-first-party = ["attio", "attio_cli"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
